manifests/apps/chirpy/chirpy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chirpy
  namespace: apps
  labels:
    app: chirpy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chirpy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: chirpy
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: site
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
      volumes:
        - name: configmap
          configMap:
            name: chirpy-site
        - name: site
          persistentVolumeClaim:
            claimName: chirpy-built

---
apiVersion: v1
kind: Service
metadata:
  name: chirpy
  namespace: apps
spec:
  selector:
    app: chirpy
  ports:
    - port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chirpy
  namespace: apps
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`blog.smartmur.ca`)
      kind: Rule
      services:
        - name: chirpy
          port: 80
  tls: {}
